--- a/class.html
+++ b/class.html
@@ -1,9 +1,8 @@
+New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give you first-letters navigation
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="x-icon"
-        href="/Te Puia Resources/Images/icon2.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css.css" rel="stylesheet" type="text/css">
         <title>Class</title>
@@ -31,11 +30,15 @@
                         Wood Carving
                     </h3>
                     <p>
-                        stuff
+                        Today fulltime carving students study for three years at 
+                        the national carving school, under the guidance of 
+                        those, such as Clive Fugill and James Rickard, master 
+                        carvers at Te Puia who were once institute carving 
+                        students themselves.
                     </p>
                 </div>
                 <div class="img">
-                    <img src="./Te Puia Resources/Images/carving.jpg" 
+                    <img src="./Te%20Puia%20Resources/Images/carving.jpg"
                     alt="Te Puia pa">
                 </div>
             </section>
@@ -45,41 +48,81 @@
                         Main Text
                     </h3>
                     <p>
-                        stuff
+                        Here at Te Puia we offer you the chance to take away 
+                        traditional Māori carvings; beautiful handcrafted pieces 
+                        made at our National Carving School. 
                     </p>
                 </div>
                 <div>
                     <p>
-                        stuff
+                        The protruding tongue, as used in the haka (war dance), 
+                        is intended as a symbol of defiance, determination and 
+                        strength, however in many carvings it can also symbolise 
+                        the oral nature in which information was passed on from 
+                        generation to generation.
                     </p>
                 </div>
             </section>
             <section class="two-column">
                 <div class="img">
-                    <img src="./Te Puia Resources/Images/main-weving.jpg" 
+                    <img src="./Te%20Puia%20Resources/Images/main-weving.jpg" 
                     alt="Hot rocks">
                 </div>
                 <div class="history">
                     <h3>
-                        Weaving carving
+                        Weaving 
                     </h3>
                     <p>
-                        stuff
+                            At the National Weaving school, students are 
+                            taught the skills and traditions of a craft 
+                            hundreds of years old. “I believe weaving can only 
+                            be learnt the old way - by sitting, by listening, 
+                            by touching and by doing,” says head of the 
+                            weaving school, Edna Pahewa.
                     </p>
                 </div>
             </section>
             <section id="class-text-weaving">
                 <div>
                     <h3>
-                        Main Text
+                        Flax
                     </h3>
                     <p>
-                        stuff
+                        Harakeke (Flax) is unique to New Zealand and is one of 
+                        our most ancient plant species.<br> 
+                        When our ancestors arrived in New Zealand they quickly
+                        discovered that flax could be woven to make clothing, 
+                        housing materials and decorative tūrapa (panels) for 
+                        their houses.<br>
+                        Two native species of flax both come from the lily 
+                        family. Harakeke (common flax) grows up to three 
+                        metres high and has firm, long leaves with a fine muka
+                        fibre, ideal for all types of weaving. Wharariki 
+                        (mountain flax) is found along coastlines, growing up 
+                        to 1.6 metres with softer leaves and less fibre than 
+                        harakeke
                     </p>
                 </div>
                 <div>
                     <p>
-                        stuff
+                        As well as learning how to weave harakeke (flax) and 
+                        other materials, students learn the stories and 
+                        designs unique to each iwi (tribe), as well as the 
+                        Māori protocols associated with weaving. These include
+                        planting according to the phases of the moon and 
+                        reciting prayers of thanks for flax and trees used.<br>
+                        Te Rito is named after the baby shoot that sits deep at
+                        the heart of the flax. That baby is protected by two 
+                        outside shoots, the mother and father. Students learn 
+                        never to touch the inner three shoots when cutting the
+                        flax as they are the nucleus - the family unit too 
+                        precious to be broken. Without these shoots, the flax 
+                        will lose its identity.<br>
+                        Māori used various art forms to record their histories 
+                        and stories, preserving them for future generations. 
+                        Weaving patterns and styles were designed to symbolise
+                        particular stories and these were handed down within a 
+                        family or tribe.
                     </p>
                 </div>
             </section>
